--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     </style>
   </head>
   <body>
-    this is a test // this is anothter test
+    this is a test // this is anothter test<br>
+    THIS IS YET A THIRD TEST
     <ul id="messages"></ul>
     <form id="form" action="">
       <input id="input" autocomplete="off" /><button>Send</button>
