--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     this is a test // this is anothter test<br>
-    THIS IS YET A THIRD TEST
+    THIS IS YET A THIRD TEST ..
     <ul id="messages"></ul>
     <form id="form" action="">
       <input id="input" autocomplete="off" /><button>Send</button>
