--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 
     123345
 
+    abcdefg
+
     <ul id="messages"></ul>
     <form id="form" action="">
       <input id="input" autocomplete="off" /><button>Send</button>
